# RS_main

./: CMakeLists.txt  README.md
data/: community_test_graph.txt  expected_test_result.txt  test_graph.mtx
include/: R_spanner_helper.hpp  R_spanner_kernels.cuh  common.hpp  cuCompactor.cuh  printer.hpp
src/: R_spanner.cu  R_spanner_helper.cpp  R_spanner_kernels.cu  printer.cpp
tests/: test_compute_row_ptr.cpp  test_filter_kernel.cpp  test_find_ngbr_comm_kernel.cpp
tools/community_detection/: README.txt  find_community_usingNetworkit.py
tools/plot/Plot_Fig_10_11/: plot_time.py  plot_time_stepwise.py  raw_results.txt  rawdata_to_csv.py  timing_results.csv
tools/plot/Plot_Fig_8/: all_resultsGPU.csv  plot_GPU_vs_HIS_new.py
tools/plot/Plot_Fig_9/: plot_speedup.py
